fix(index-style): manage rooms container overflow

--- a/static/index.css
+++ b/static/index.css
@@ -43,6 +43,8 @@ header{
     display: flex;
     flex-direction: column; 
     gap: .8rem;
+    height: 80vh;
+    overflow-y: scroll;
 }
 
 .room{
